# booking-webapp

./: .gitignore  CMakeLists.txt
cmake/: post_build.cmake
res/: config_default.ini
res/css/: styles.css
res/templates/: base.html  index.html  schedule.html
scripts/: gen_keys.bat  gen_keys.sh
src/: PasswordHasher.cpp  PasswordHasher.h  RequestHandlerFactory.cpp  RequestHandlerFactory.h  ScheduleManager.cpp  ScheduleManager.h  ServerApplication.cpp  ServerApplication.h  SessionManager.cpp  SessionManager.h  main.cpp
src/handlers/: ActionHandler.cpp  ActionHandler.h  DynamicTemplateHandler.cpp  DynamicTemplateHandler.h  LoginHandler.cpp  LoginHandler.h  NotFoundHandler.cpp  NotFoundHandler.h  RedirectHandler.cpp  RedirectHandler.h  RegistrationHandler.cpp  RegistrationHandler.h  ScheduleHandler.cpp  ScheduleHandler.h  StaticResourceHandler.cpp  StaticResourceHandler.h
